# applyd

./: .gitignore  APPLYD_MS1_DASHBOARD_PLAN.md  Makefile  README.md
dashboard/: .env.example  db_sanity.py  pyproject.toml
dashboard/app/: cli.py  config.py  database.py  logging_config.py  main.py  scheduler.py  schemas.py
dashboard/app/admin/: __init__.py  audit.py  deps.py
dashboard/app/identity/: __init__.py  auth.py  routes.py
dashboard/app/routers/: jobs.py  me.py  pages.py  reports.py  saved.py  scrape.py  settings.py  stats.py
dashboard/app/services/: cache.py  company_catalog_sync.py  ingestion.py  job_lifecycle.py  local_scraper.py  manifest.py  query.py  roles.py  (+3 more)
dashboard/templates/: base.html  dashboard.html  index.html  job_detail.html  landing.html  public_base.html  saved.html  scrape.html  scrape_detail.html  settings.html  signup.html  stats.html  styleguide.html
dashboard/tests/: conftest.py  test_admin_audit.py  test_admin_backups.py  test_admin_clear_failed_logins.py  test_admin_deps.py  test_admin_expirations_review.py  test_admin_job_reports.py  test_admin_maintenance.py  test_admin_pages.py  test_admin_routers.py  test_admin_sse.py  test_errors.py  test_ingestion_drop_tracking.py  test_inventories.py  test_jobs.py  test_lifecycle.py  test_local_scraper_canonicalization.py  test_me_stats.py  test_meta.py  test_pages.py  test_reports.py  test_saved.py  test_scrape_api.py  test_settings.py  test_stats.py  test_verifier.py
identity-service/: pyproject.toml
identity-service/app/: auth.py  cli.py  config.py  database.py  main.py
identity-service/templates/: signin.html
identity-service/tests/: conftest.py  test_admin_api.py  test_admin_cli.py  test_auth_hardening.py
(+49 files in other folders)
