[project]
name = "applyd-dashboard"
version = "1.0.1"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "redis>=6.2.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
# Keep collection scoped to our suite — `vendor/` ships upstream test files
# we don't run and that don't share our dependencies. Without this, a bare
# `pytest` (as in the release workflow) walks into vendor and errors out.
testpaths = ["tests"]
