[project]
name = "applyd-identity-service"
version = "1.0.1"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=23.1.0",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.28",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.0",
]
